# markx

./: .gitignore  CHANGELOG.md  CI-FIXES-COMMIT.md  CI-FIXES-SUMMARY.md  CONTRIBUTING.md  FILE-ASSOCIATION.md  LICENSE  MACOS_BUILD.md  MACOS_FILE_OPEN_ISSUE.md  README.md  TEST-FINAL-VERIFICATION.md  TESTING-COMPLETE.md  TROUBLESHOOTING.md  check-macos-implementation.md  debug-devtools.js  debug-file-open.js  diagnose-build-issue.js  diagnose-explorer-issue.js  e2e-cdp-test.js  e2e-open-md-test.js  feature-showcase.md  final-screenshots.js  fix-build-issues.sh  fix-ci-config.sh  fix-ci-issues.sh  fix-pnpm-install.sh  improved-macos-file-open.rs  local-test.html  mode-switch-verify.js  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  research-macos-file-open.js  run-basic-tests.sh  run-tests.sh  run-ui-tests.sh  screenshot-cdp.js  screenshot.js  simple-test.html  (+19 more)
.github/workflows/: ci-simple.yml  ci.yml
playwright-report/: index.html
scripts/: generate-icons.js
src/: file-types.js  index.html  index.html.backup  main.js  splashscreen.html  style.css
src-tauri/: Cargo.toml  Info.plist  entitlements.xml  installer-hooks.nsh  registry.wxs  tauri.conf.json  tauri.conf.json.backup  tauri.conf.json.bak  tauri.conf.json.fixed  tauri.conf.json.minimal
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main.rs.backup  main.rs.correct  main.rs.fixed
tests/: macos-ui-test.js  setup.js  ui-basic.test.js
tests/component/: interaction.test.js  ui-components.test.js
tests/e2e/: app.spec.js  editor.spec.js  file-types.test.js  ui-functionality.test.js
tests/unit/: auto-save.test.js  editor-operations.test.js  file-manager.test.js  outline-parser.test.js  shortcut-manager.test.js  theme-manager.test.js
