[package]
name = "markedit"
version = "1.0.1"
description = "轻量级 Markdown 编辑器"
authors = ["wy7980"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# macOS activation policy plugin - 确保应用在macOS上正确激活
# 注意：当前版本可能不支持这个插件，所以先注释掉
# tauri-plugin-activation-policy = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
